--- a/react-debugging.html
+++ b/react-debugging.html
@@ -65,11 +65,12 @@
         // No need to change anything ABOVE this line ^
 
         return (
+          <>
           <h1>Draw a Card</h1>
-          <button onClick={}>
+          <button onClick={drawCard}>
             Click to Draw a Card
           </button>
-          <button onclick={shuffle}>
+          <button onClick={shuffle}>
             Return Cards and Shuffle Deck
           </button>
           <div style={handStyles}>
@@ -81,10 +82,10 @@
               )
             })}
           </div>
+          </>
         )
       }
-
-      // No need to change anything below this line
+      // No need to change anything below this line 
 
       const domContainer = document.querySelector('#react-container')
       const root = ReactDOM.createRoot(domContainer)
